Use List.get(0) instead of getFirst() for metadataLogEntries in the table-property-history assertion